# libcomplearn

./: .gitignore  AUTHORS  CONTRIBUTORS  COPYING  Makefile.am  NEWS  README  README.md  aclocal.m4  circle.yml  configure.ac
lib/: clutil.map  clutil.sym  complearn.map  complearn.sym  libcomplearn.pc.in
libcl/: Makefile.am  clpopen.c  clpopen.h  cmod_xz.c  cmod_zlib.c  compressor_base.c  compressor_base.h  libcl.c
libcl/include/: complearn.h
libcl/include/complearn/: cltop.h  compressor_base.h  libcl.h
libclutil/: Makefile.am  charholder.c  charholder.h  clutil.h  directoryiterator.c  directoryiterator.h  doubleholder.c  doubleholder.h  filehelper.c  filehelper.h  filenamelistiterator.c  filenamelistiterator.h  ncditerator.c  ncditerator.h  ncditeratortype.h  singlefileiterator.c  singlefileiterator.h  stringholder.c  stringholder.h
m4/: ld-version.m4
man/: ncd.1
src/: Makefile.am  ncd.c
test/: Makefile.am  compile-dist-test  compile-test  run-ncd-compressor-specific-test  run-ncd-test  run-unitcheck-test  top
test/unitcheck/: Makefile.am  basic_clutil.ts  basic_complete.ts  basic_stringholder.ts
tools/: Makefile.am  ncd.c  ncdhelpmsg.c  ncdutil.c  ncdutil.h  stringholder.c
