AC_PREREQ([2.69])
AC_INIT([libcomplearn], [0.7.1], [rudi@morefuntechnologies.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_LIBOBJ_DIR([portable])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE()
AC_PROG_CC()
AC_CONFIG_SRCDIR([src/ncd.c])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
